[package]
name = "device_tree_source"
version = "0.2.0"
authors = ["Gabriel Smith <ga29smith@gmail.com>"]
description = "A library to parse Device Tree Source (DTS) files."
license = "MIT"
categories = ["parser-implementations"]
repository = "https://github.com/yodaldevoid/dts_viewer"

[dependencies]
nom = { version = "^3.0", features = ["verbose-errors"] }

[dev-dependencies]
mktemp = "0.3"
walkdir = "1"
rustc-test = "0.1.4"

[[test]]
name = "iter_dts_files"
harness = false
